<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/et_distancia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="number"
        android:hint="@string/etDistancia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/tvTotal_de_quilometros" />

    <EditText
        android:id="@+id/et_price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/etPreco" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/tvPreco_por_litro" />

    <EditText
        android:id="@+id/et_autonomia"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:inputType="numberDecimal"
        android:hint="@string/etAutonomia" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="2dp"
        android:text="@string/tvKms_por_litro" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/tvSeu_gasto_total_ser_de"
        android:textAllCaps="true"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/tv_total"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/t_r_0"
        android:textAllCaps="true"
        android:textColor="#4CAF50"
        android:textSize="30sp" />

    <Button
        android:id="@+id/bt_calcular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/teal_700"
        android:padding="16dp"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:gravity="center"
        android:text="@string/bt_calcular"/>


</LinearLayout>